<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.intrbiz.express</groupId>
  <artifactId>express</artifactId>
  <version>5.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Intrbiz Express</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
	<repositories>
		<repository>
			<id>intrbiz</id>
			<name>Intrbiz</name>
			<url>https://nexus.intrbiz.net/repository/intrbiz</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>intrbiz</id>
			<name>Intrbiz</name>
			<url>https://nexus.intrbiz.net/repository/intrbiz</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://nexus.intrbiz.net/repository/intrbiz-snapshot</url>
		</snapshotRepository>
		<repository>
			<id>intrbiz</id>
			<name>Intrbiz</name>
			<url>https://nexus.intrbiz.net/repository/intrbiz-release</url>
		</repository>
	</distributionManagement>

  <dependencies>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.11</version>
		<scope>test</scope>
	</dependency>
    <dependency>
    	<groupId>com.intrbiz.core</groupId>
    	<artifactId>core</artifactId>
    	<version>[1.0,)</version>
    </dependency>
    <dependency>
    	<groupId>log4j</groupId>
    	<artifactId>log4j</artifactId>
    	<version>1.2.14</version>
    </dependency>
    <dependency>
    	<groupId>org.hamcrest</groupId>
    	<artifactId>hamcrest-all</artifactId>
    	<version>1.3</version>
    	<scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-surefire-plugin</artifactId>
        		<version>3.0.0-M5</version>
        		<configuration>
                    <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/all.policy</argLine>
                </configuration>
      		</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>package-source</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>package-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
			                <additionalparam>-Xdoclint:none</additionalparam>
                            <source>8</source>
                            <failOnError>false</failOnError>
			            </configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
